2007-12-21  Michael Natterer  <mitch@gimp.org>

	* app/xcf/xcf-save.c
	* app/xcf/xcf-load.c: use accessors for colormap, parasites and
	more item, layer, channel and mask properties instead of accessing
	the object structs directly. Some minor style cleanups.

2007-12-20  Sven Neumann  <sven@gimp.org>

	* app/plug-in/gimppluginmanager-menu-branch.[ch]: added accessor
	for the list of menu branches.

	* app/actions/plug-in-actions.c (plug_in_actions_setup): use it.

2007-12-20  Sven Neumann  <sven@gimp.org>

	* configure.in: readded some AC_SUBST() that were removed under
	the wrong assumption they would not be needed any longer.
	Consistently use # to mark comments in configure.in.
	
2007-12-20  Sven Neumann  <sven@gimp.org>

	* app/app.c: call gegl_exit() on shutdown.

2007-12-20  Sven Neumann  <sven@gimp.org>

	* INSTALL
	* configure.in: require GEGL >= 0.0.14.

	* app/Makefile.am
	* app/app.c: initialize the GEGL library.

2007-12-20  Sven Neumann  <sven@gimp.org>

	* app/paint/gimpink.c: minor cleanup.

2007-12-20  Sven Neumann  <sven@gimp.org>

	* authors.xml: updated last-active attribute for recent contributors.

2007-12-20  Sven Neumann  <sven@gimp.org>

	* configure.in
	* plug-ins/Makefile.am
	* plug-ins/psd: added new PSD load plug-in written by John Marshall.
	This plug-in adds a couple of features. See bug #448181 for details.

	* plug-ins/common/Makefile.am
	* plug-ins/common/plugin-defs.pl
	* plug-ins/common/psd-load.c: removed old psd-load plug-in.

2007-12-20  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpprofilechooserdialog.c: added code for adding a
	shortcut to the default ICC profile location on Windows. Based on
	a patch by John Marshall (bug #503410).

2007-12-20  Sven Neumann  <sven@gimp.org>

	* app/actions/documents-commands.c (documents_clear_cmd_callback):
	adapt to changed gimp_documents_save() API.

2007-12-19  Michael Natterer  <mitch@gimp.org>

	* app/core/gimp-contexts.[ch]